--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,18 @@ version: "3"
 
 services:  
 
+  app:
+    build: .
+    container_name: fullcycle-kafka-node-app
+    depends_on:
+      - kafka
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./src:/app/src
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
+
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     environment:
